--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dist": "npm run build && node build.js && deploy.sh"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
+    "axios": "^0.18.0",
     "jquery": "^3.3.1",
     "three-obj-loader": "^1.1.3",
     "three.js": "^0.77.1",
